--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
 .vs
-Zork/bin
-Zork/obj
 Zork.Cli/bin
 Zork.Cli/obj
 Zork.Common/bin
+Zork.Common/obj
 Zork.Unity/Library
 Zork.Unity/Logs
 Zork.Unity/.vsconfig
